# avtransport

./: .gitignore  LICENSE.md  README.md  draft-avtransport-spec.bs  draft-avtransport-spec.md  draft-qproto-dash-interop.md  draft-qproto-spec.md  draft-qstream-dash-interop.md  draft-qstream-spec.md  index.html  meson.build  meson_options.txt
.github/workflows/: auto-publish.yml
libavtransport/: README.md  address.c  address.h  attributes.h  avtransport.c  buffer.c  buffer.h  bytestream.h  common.c  common.h  connection.c  connection_file.c  connection_internal.h  connection_scheduler.c  connection_scheduler.h  connection_socket.c  decode.c  encode.c  encode.h  input.c  input.h  input_file.c  input_internal.h  io_common.c  io_common.h  io_dcb.c  io_fd.c  io_file.c  io_file_template.c  io_mmap.c  io_null.c  io_socket_common.c  io_socket_common.h  io_template.c  io_udp.c  io_unix.c  io_utils.h  ldpc.c  ldpc.h  ldpc_decode.c  (+36 more)
libavtransport/include/avtransport/: avtransport.h  connection.h  input.h  meson.build  output.h  rational.h  receive.h  send.h  stream.h  utils.h  version.h.in
libavtransport/include/libavtransport/: avtransport.h  common.h  connection.h  input.h  meson.build  output.h  rational.h  stream.h  utils.h  video.h
libavtransport/tests/: address.c  file_io_common.c  file_io_common.h  file_io_template.c  io_fd.c  io_file.c  io_mmap.c  io_udp.c  io_udp_lite.c  io_unix.c  ldpc_encode.c  merger.c  meson.build  net_common.c  net_common.h  net_io_common.c  packet_encode_decode.c  proto_quic.c  udp_common.c
libavtransport/tools/: spec2c.py
libavtransport/x86/: ldpc_encode.asm  meson.build
libqproto/: buffer.c  buffer.h  common.c  common.h  input.c  input.h  input_file.c  meson.build  output.c  output.h  output_file.c  output_socket.c  raptor.c  raptor.h  reorder.c  reorder.h  utils.h
libqproto/include/libqproto/: common.h  input.h  output.h  utils.h  video.h
tools/: README.md  avcat.c  avtdump.c  genopt.h  meson.build  spec2c.py
tools/avcat/: io.c  io.h
