option('assert',
    type: 'integer',
    min : -1,
    max : 2,
    value : -1,
    description: 'Assert level with which to build the library (-1: depending on the build type)'
)

option('enable_asm',
    type: 'feature',
    value: 'enabled',
    description: 'Build libavtransport with assembly optimizations'
)

option('tools',
    type: 'feature',
    value: 'auto',
    description: 'Build libavtransport CLI tools'
)

option('tests',
    type: 'feature',
    value: 'auto',
    description: 'Build tests'
)

option('protocols',
    type : 'array',
    value : ['all'],
    choices : [ 'all' ],
    description : 'List of protocol types to build with.'
)

option('io',
    type : 'array',
    value : ['all'],
    choices : [ 'all' ],
    description : 'List of inputs/outputs to build with.' 
)

option('ffmpeg',
    type: 'feature',
    value: 'auto',
    description: 'Enable demuxing and muxing of non-AVT files via FFmpeg (in CLI tools only)'
)

option('fuzzing_engine',
   type: 'combo',
   choices : ['none', 'libfuzzer', 'oss-fuzz'],
   value: 'none',
   description: 'Select the fuzzing engine'
)

option('fuzzer_ldflags',
    type: 'string',
    description: 'Extra LDFLAGS used during linking of fuzzing binaries'
)
